Remove padding from navbars to condense them a bit. Fix 1 pixel extra padding on state button

--- a/web/skins/classic/css/base/skin.css
+++ b/web/skins/classic/css/base/skin.css
@@ -647,7 +647,8 @@ input[type=submit]:disabled,
   padding: 0;
 }
 
-.navbar{
+.navbar {
+  padding: 0 0 0 8px;
 	margin-bottom: 0 !important;
 	border-radius: 0;
 	background-color:#485460 !important;
@@ -799,7 +800,7 @@ a.flip {
   padding: 4px 10px 7px 10px;
 }
 #stateModalBtn {
-  padding: 4px 10px 7px 10px;
+  padding: 4px 10px 6px 10px;
 }
 #shutdownButton {
   padding: 4px 10px 4px 10px;
